# 3arm_robotic_manipulator

DC1/: package.xml  setup.cfg  setup.py
DC1/DC1/: controller.py
DC1/config/: robot_config.yaml
DC1/launch/: robot.launch.py
DC1/urdf/: robot.urdf
